@@ -66,6 +66,7 @@ Merged from 2.2:
  * Improve streaming synchronization and fault tolerance (CASSANDRA-11414)
  * MemoryUtil.getShort() should return an unsigned short also for architectures not supporting unaligned memory accesses (CASSANDRA-11973)
 Merged from 2.1:
+ * Fix merkle tree depth calculation (CASSANDRA-12580)
  * Fix queries with empty ByteBuffer values in clustering column restrictions (CASSANDRA-12127)
  * Disable passing control to post-flush after flush failure to prevent data loss (CASSANDRA-11828)
  * Allow STCS-in-L0 compactions to reduce scope with LCS (CASSANDRA-12040)
